--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -18,23 +18,6 @@
         </div>
     </div>
 
-    <div class="col-12 md:col-6 xl:col-3" *ngIf="rol == '1' || rol == '2'">
-        <div class="card mb-0">
-            <div class="flex justify-content-between mb-3">
-                <div>
-                    <span class="block text-500 font-medium mb-3"
-                        >Productos Bajos en Stock</span>
-                        <div class="text-900 font-medium text-xl">
-                            {{ productosBajosStock }}
-                        </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
     <div class="col-12 md:col-6 xl:col-6">
         <div class="card">
             <h5>Acciones Rápidas</h5>
@@ -88,94 +71,16 @@
         </div>
     </div>
 
-    <div class="col-12 md:col-6 xl:col-12" *ngIf="rol == '1' || rol == '2'">
+    <div class="col-12">
         <div class="card">
             <div class="flex justify-content-between mb-3">
-                <div>
+                <div class="w-full">
                     <span class="block text-500 font-medium mb-3"
-                        >Productos Terminados</span>
-                    <p-table
-                    [value]="productoTerminados"
-                    [scrollable]="true"
-                    [paginator]="true"
-                    [rows]="10"
-                    [showCurrentPageReport]="true"
-                    [globalFilterFields]="['nombre']"
-                    currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
-                    scrollHeight="400px"
-                >
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Cantidad</th>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-producto>
-                        <tr>
-                            <td>{{ producto.nombre }}</td>
-                            <td>{{ producto.stock_actual }}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-
+                        >Operaciones del Día</span>
+                    <app-tabla-operaciones class="w-full"></app-tabla-operaciones>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="grid">
-    <div class="col-12 md:col-12">
-        <div class="card">
-            <h5>Productos Proximos a Vencer</h5>
-            <div class="grid">
-                <div class="col-12 md:col-6">
-                    <p-dropdown
-                        [options]="optionsDias"
-                        [(ngModel)]="diasFiltrar"
-                        placeholder="Seleccione un rango de días"
-                    ></p-dropdown>
-                </div>
-                <div class="col-12 md:col-6">
-                    <button
-                        pButton
-                        pRipple
-                        label="Buscar"
-                        icon="pi pi-search"
-                        class="p-button-success w-full"
-                        (click)="buscarProductosProximosAVencer()"
-                    ></button>
-                </div>
-            </div>
-            <p-table
-                [value]="productosProximosAVencer"
-                [scrollable]="true"
-                [paginator]="true"
-                [rows]="10"
-                [showCurrentPageReport]="true"
-                [globalFilterFields]="['nombre', 'vencimiento', 'dias_a_vencer']"
-                currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
-                scrollHeight="400px"
-            >
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Vencimiento</th>
-                        <th>Días a Vencer</th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-producto>
-                    <tr>
-                        <td>{{ producto.nombre }}</td>
-                        <td>
-                            {{
-                                producto.fecha_vencimiento | date : "dd/MM/yyyy"
-                            }}
-                        </td>
-                        <td>{{ producto.dias_restantes }}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-    </div>
-</div>
