--- a/src/app/features/productos/productos.component.html
+++ b/src/app/features/productos/productos.component.html
@@ -42,6 +42,24 @@
     ></p-button>
 </div>
 
+<div class="col-12 md:col-2">
+    <p-button
+        label="Descargar Plantilla Ajuste"
+        styleClass="p-button-primary"
+        icon="pi pi-download"
+        (click)="exportarPlantillaAjuste()"
+    ></p-button>
+</div>
+
+<div class="col-12 md:col-2">
+    <p-button
+        label="Importar Excel Ajuste"
+        styleClass="p-button-warning"
+        icon="pi pi-upload"
+        (click)="importarAjusteExcel()"
+    ></p-button>
+</div>
+
             </div>
         </div>
     </div>
@@ -368,7 +386,7 @@
         <h3>Datos Básicos del Producto</h3>
         <form [formGroup]="productoForm" (ngSubmit)="saveProduct()">
             <div class="grid">
-                <div class="col-12 md:col-4">
+                <div class="col-12 md:col-4" *ngIf="!producto.editar">
                     <label htmlFor="categoria" class="font-bold mb-2">Categoría</label>
                     <app-selector-categoria (itemSeleccionado)="productoForm.get('categoria_id').setValue($event.id)" required></app-selector-categoria>
                     <small *ngIf="productoForm.get('categoria_id').invalid && (productoForm.get('categoria_id').dirty || productoForm.get('categoria_id').touched)" class="p-error">Seleccione una categoría</small>
@@ -407,7 +425,7 @@
                     <label htmlFor="lote" class="font-bold mb-2">N° Lote</label>
                     <input type="text" pInputText formControlName="lote" required value="1">
                 </div>
-                <div class="col-12 md:col-4">
+                <div class="col-12 md:col-4" >
                     <label htmlFor="stockActual" class="font-bold mb-2">Stock Actual</label>
                     <input type="number" pInputText formControlName="stock_actual" required (input)="agregarABodega()">
                     <small *ngIf="productoForm.get('stock_actual').invalid && productoForm.get('stock_actual').touched" class="p-error">Ingrese un stock válido</small>
@@ -508,5 +526,56 @@
         <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-danger" (click)="excelDialog = false"></button>
     </ng-template>
 </p-dialog>
+
+<p-dialog
+    [(visible)]="excelAjusteDialog"
+    [style]="{ width: '70%' }"
+    [modal]="true"
+    header="Cargar Excel Ajuste"
+    class="p-fluid"
+>
+    <div class="grid">
+        <div class="col-12 mb-3">
+            <div class="field">
+                <label for="excelFile" class="font-bold mb-2">Seleccionar archivo Excel</label>
+                <input
+                    type="file"
+                    id="excelFile"
+                    accept=".xlsx,.xls"
+                    class="p-inputtext"
+                    (change)="onExcelFileAjusteSelect($event)"
+                />
+            </div>
+        </div>
+
+        <div class="col-12 mb-3">
+            <div class="field">
+                <label for="excelFile" class="font-bold mb-2">Productos a Ajustar: {{resultImpoFile.length}}</label><br>
+                <label for="excelFile" class="font-bold mb-2">{{resultImport.message}}</label>
+                </div>
+                <div class="field">
+                    <p-table [value]="resultImport.errores" *ngIf="resultImport.errores && resultImport.errores.length > 0">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Errores</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-error>
+                            <tr>
+                                <td>{{error}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    </div>
+
+        </div>
+
+    </div>
+    <ng-template pTemplate="footer">
+        <button pButton pRipple label="Procesar datos" icon="pi pi-check" class="p-button-success mr-2" (click)="processExcelAjusteData()" [disabled]="resultImpoFile.length==0" ></button>
+        <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-danger" (click)="excelAjusteDialog = false"></button>
+    </ng-template>
+</p-dialog>
+
 
 
