--- a/src/app/features/reportes/reporte-dia-historicos/reporte-dia-historicos.component.html
+++ b/src/app/features/reportes/reporte-dia-historicos/reporte-dia-historicos.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<app-loading *ngIf="loading"></app-loading> 
+<app-loading *ngIf="loading"></app-loading>
 <div class="grid">
     <div class="col-12">
         <div class="card p-fluid">
@@ -25,7 +25,7 @@
 
                     <div class="field">
                         <label for="endDate"></label><br>
-                        <p-button label="Filtrar" icon="pi pi-filter" (click)="consultar()" styleClass="p-button-info">
+                        <p-button label="Consultar" icon="pi pi-filter" (click)="consultar()" styleClass="p-button-info">
                         </p-button>
                     </div>
 
@@ -40,6 +40,7 @@
             <br>
             <div class="grid">
                 <div class="col-12">
+                     <p-button label="Exportar" icon="pi pi-file" (click)="exportarPDF()" styleClass="p-button-success"></p-button>
                     <p-table
                     #dt
                     [value]="data"
@@ -129,7 +130,6 @@
                         </tr>
                     </ng-template>
                 </p-table>
-                <p-button label="Exportar" icon="pi pi-file" (click)="exportarPDF()" styleClass="p-button-success"></p-button>
                 </div>
             </div>
         </div>
