feat: actualizar títulos de módulos y mejorar visualización de productos

--- a/src/app/features/apertura-caja/ver-caja/ver-caja.component.html
+++ b/src/app/features/apertura-caja/ver-caja/ver-caja.component.html
@@ -39,6 +39,9 @@
                 { concepto: 'Base Inicial', valor: data.base_inicial },
                 { concepto: 'Total Ventas', valor: data.totalventas },
                 { concepto: 'Total Gastos', valor: data.totalgastos },
+                { concepto: 'Total Abonos Cliente', valor: data.totalabonos },
+                { concepto: 'Total Abonos Proveedor', valor: data.totalpagoscompra },
+
                 {
                     concepto: 'Total Neto',
                     valor: data.totalneto,
