--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,7 +1,7 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="/">
         <img src="assets/images/Logo_App.png" alt="logo">
-        <h6>OASIS</h6>
+        <h6>BUCARAMANGA</h6>
     </a>
     <app-menu style="width: 100%;"></app-menu>
 
